<resources>
    <string name="app_name">RIDA</string>
    <string name="Create_Acct">Create Account</string>
    <string name="Sign_In">Sign In</string>
    <string name="Logo">Logo</string>
    <string name="Description">\"The Rideshare Driver\'s all in one Social Media app\"</string>
    <string name="No_Acct">You don\'t have an account?</string>
    <string name="FullName">Full Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm_Pass">Confirm Password</string>
    <string name="Lyft">Lyft</string>
    <string name="Uber">Uber</string>
    <string name="Exist_Acct">Already have an account?</string>
    <string name="Forgot_Pass">Forgot Password</string>
    <string name="Home">Home</string>
    <string name="events">events</string>
    <string name="business">business</string>
    <string name="hotspots">Hotspots</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Events">Events</string>
    <string name="Expenses">Expenses</string>
    <string name="Hotspots">Hotspots</string>
    <string name="Menu">Menu</string>
    <string name="Profile">Profile</string>
    <string name="messages_button_name">messages_button_name</string>
    <string name="settings_button_name">settings_button_name</string>
    <string name="profile_button_name">profile_button_name</string>
    <string name="help_button_name">help_button_name</string>
    <string name="signout_button_name">signout_button_name</string>
    <string name="title_activity_maps">Hotspots</string>
    <string name="More">More</string>
    <string name="GasCost">Gas Cost</string>
    <string name="addVal">Add</string>
    <string name="Gas_Cost">Gas Cost</string>
    <string name="addExpense">Add to Expense Report</string>
    <string name="Maint_Cost">Maintenance Cost</string>
    <string name="Earnings">Earnings</string>
    <string name="GasMaintText">Gas or Maintenance Cost</string>
    <string name="MileageText">Mileage</string>
</resources>
