<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.rida.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_self"
            app:destination="@+id/navigation_dashboard"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popUpTo="@+id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_self2"
            app:destination="@id/navigation_home"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_notifications"
            app:enterAnim="@anim/fragment_open_enter"
            app:exitAnim="@anim/fragment_close_exit"
            app:popUpTo="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.rida.ui.events.EventsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_expenses"
        android:name="com.example.rida.EventsFragment"
        android:label="@string/Expenses"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_hotspots"
        android:label="@string/Hotspots"
        tools:layout="@layout/fragment_hotspots" />

    <fragment
        android:id="@+id/navigation_profile"
        android:label="@string/Profile"
        tools:layout="@layout/fragment_profile" />
</navigation>